...
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="@+id/btnLogout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnLogout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
